# geometry-survival

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  DungeonsAndGeometry.sln  GenerateVS2019.bat  README.md  premake5.lua
libs/: CMakeLists.txt
libs/box2d-2.4.1/src/: CMakeLists.txt
src/Editor/: CMakeLists.txt  Main.cpp
src/Engine/: Application.cpp  Application.h  Application.inl  CMakeLists.txt
src/Engine/Components/: CMakeLists.txt  Core.h  Physics.h  UI.h  View.h
src/Engine/Components/Animations/: AnimationData.h  AnimatorComponent.cpp  AnimatorComponent.h  AnimatorController.cpp  AnimatorController.h  AnimatorController.inl  IAnimationPlayRequester.h
src/Engine/Components/Core/: IComponent.cpp  IComponent.h  IComponent.inl  IConstraint.cpp  IConstraint.h  ITransform.cpp  ITransform.h  RectTransform.cpp  RectTransform.h  RectTransform.inl  ScreenTransform.cpp  ScreenTransform.h  Transform.cpp  Transform.h  WorldTransform.cpp  WorldTransform.h
src/Engine/Components/Drawables/: AnimationControllerComponent.cpp  AnimationControllerComponent.h  AnimationStateMachine.cpp  AnimationStateMachine.h  AnimationStateMachine.inl  ShapeDrawableComponent.cpp  ShapeDrawableComponent.h  SpriteDrawableComponent.cpp  SpriteDrawableComponent.h  SpriteDrawableComponent.inl  TextDrawableComponent.cpp  TextDrawableComponent.h
src/Engine/Components/Physics/: CircleCollider.cpp  CircleCollider.h  CircleColliderComponent.cpp  CircleColliderComponent.h  CircleFixtureComponent.cpp  CircleFixtureComponent.h  ColliderData.h  PhysicsBodyComponent.cpp  PhysicsBodyComponent.h  RectangleFixtureComponent.cpp  RectangleFixtureComponent.h  RigidbodyComponent.cpp  RigidbodyComponent.h  TriangleFixtureComponent.cpp  TriangleFixtureComponent.h
src/Engine/Components/UI/: HorizontalLayoutComponent.cpp  HorizontalLayoutComponent.h  LayoutElementComponent.cpp  LayoutElementComponent.h  VerticalLayoutComponent.cpp  VerticalLayoutComponent.h
src/Engine/Components/View/: CameraComponent.cpp  CameraComponent.h  RectangleViewComponent.cpp  RectangleViewComponent.h  ShapeViewComponent.cpp  ShapeViewComponent.h  TextViewComponent.cpp  TextViewComponent.h  TriangleComponent.cpp  TriangleComponent.h
src/Engine/Core/: CMakeLists.txt  CameraData.h  ColliderData.h  Config.h  CustomYAMLTypes.h  EventData.h  Events.h  GameObject.cpp  GameObject.h  GameObject.inl  Scene.cpp  Scene.h  Signal.h
src/Engine/Core/GameObject/: GameObject.cpp  GameObject.h  GameObject.inl  GameObjectTag.h
src/Engine/Core/Messaging/: MessageTypes.h
src/Engine/Core/QuadTree/: QuadTree.cpp  QuadTree.h
src/Engine/Core/Scene/: IScene.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h
src/Engine/Core/Serializing/: SceneSerializer.cpp  SceneSerializer.h  SerializableField.h  SerializableField.inl
src/Engine/Core/StateMachine/: BasicSceneState.cpp  BasicSceneState.h  FiniteStateMachine.cpp  FiniteStateMachine.h  FiniteStateMachine.inl  IState.h  PushdownStateMachine.cpp  PushdownStateMachine.h  PushdownStateMachine.inl  StateContainer.cpp  StateContainer.h  StateContainer.inl
src/Engine/Debug/: CMakeLists.txt  IDebuggable.cpp  IDebuggable.h  Logger.cpp  Logger.h  LoggerLevel.h  VisualDebugContext.cpp  VisualDebugContext.h
src/Engine/Debug/Backend/: ConsoleBackendStrategy.cpp  ConsoleBackendStrategy.h  ImGuiBackendStrategy.cpp  ImGuiBackendStrategy.h  UIBackendStrategy.cpp  UIBackendStrategy.h  WindowBackendStrategy.cpp  WindowBackendStrategy.h
src/Engine/ImGui/: CMakeLists.txt  imconfig.h  imgui-SFML.cpp  imgui_user.h  imgui_user.inl
src/Engine/ImGui/widgets/: timeline.h  timeline.inl
src/Engine/Managers/: AllManagers.h  AnimationData.h  AnimationManager.cpp  AnimationManager.h  AssetsManager.cpp  AssetsManager.h  CMakeLists.txt  ComponentManager.cpp  ComponentManager.h  ComponentManager.inl  ConfigManager.cpp  ConfigManager.h  ConfigManager.inl  EditorManager.cpp  EditorManager.h  EventManager.cpp  EventManager.h  EventManager.inl  GameObjectManager.cpp  GameObjectManager.h  IManager.cpp  IManager.h  InputManager.cpp  InputManager.h  PhysicsManager.cpp  PhysicsManager.h  RenderManager.cpp  RenderManager.h  ResourceManager.cpp  ResourceManager.h  ResourceManager.inl  ResourceTypes.h  SceneManager.cpp  SceneManager.h  SerializationManager.cpp  SerializationManager.h  UIManager.cpp  UIManager.h  ViewLayers.h  ViewManager.cpp  (+1 more)
src/Engine/Managers/Config/: IConfigurable.h
src/Engine/Subsystems/: CMakeLists.txt  ComponentSubsystem.h  PhysicsSubsystem.cpp  PhysicsSubsystem.h  ViewSubsystem.cpp  ViewSubsystem.h
src/Engine/UI/: CMakeLists.txt  UIElement.cpp  UIElement.h
src/Engine/Utils/: CMakeLists.txt  CvarUtils.cpp  CvarUtils.h  CvarUtils.inl  Nuklear_SFML.hpp  VectorUtils.cpp  VectorUtils.h
src/Engine/View/: CMakeLists.txt  ConsoleViewStrategy.cpp  ConsoleViewStrategy.h  IGuiView.h  IViewStrategy.h  Renderables.h  WindowViewStrategy.cpp  WindowViewStrategy.h
src/Game/: CMakeLists.txt  Game.cpp  GameInjection.h
src/Game/Components/: CMakeLists.txt
src/Game/Components/Actor/: ActorComponent.cpp  ActorComponent.h  ActorComponent.inl  BulletComponent.cpp  BulletComponent.h  BulletFieldComponent.cpp  BulletFieldComponent.h  BulletHandler.cpp  BulletHandler.h  Commands.cpp  Commands.h  DestroyAfterTimeComponent.cpp  (+9 more)
src/Game/Core/: CMakeLists.txt  EventData.h
src/Game/Managers/: CMakeLists.txt  EnemySpawningManager.cpp  EnemySpawningManager.h  GameManager.cpp  GameManager.h  GameTimer.cpp  GameTimer.h  SkillsManager.cpp  SkillsManager.h
src/Game/Physics/: CMakeLists.txt  Filters.h
src/Game/RPG/: CMakeLists.txt  RPGActor.cpp  RPGActor.h  RPGStats.h
src/Game/Scenes/: CMakeLists.txt  GamePlayScene.cpp  GamePlayScene.h  MainMenuScene.cpp  MainMenuScene.h  SplashScreenScene.cpp  SplashScreenScene.h
src/Game/Skills/: CMakeLists.txt  ISkill.h  Skill_AmmoPiercer.cpp  Skill_AmmoPiercer.h  Skill_AmmoStealer.cpp  Skill_AmmoStealer.h  Skill_BulletDamage.cpp  Skill_BulletDamage.h  Skill_BurningAmmo.cpp  Skill_BurningAmmo.h  Skill_PickupRadius.cpp  Skill_PickupRadius.h  Skill_Scatter.cpp  Skill_Scatter.h
(+356 files in other folders)
