set(SFML_VER
	SFML-2.5.1
)

set(BOX2D_VER
	box2d-2.4.1
)

set(SFML_INCLUDE
	"${CMAKE_SOURCE_DIR}/libs/${SFML_VER}/include"
	PARENT_SCOPE
)

set(BOX2D_INCLUDE
	"${CMAKE_SOURCE_DIR}/libs/${BOX2D_VER}/include"
	PARENT_SCOPE
)

set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

add_subdirectory(${SFML_VER})
add_subdirectory(${BOX2D_VER})