set(SFML_VER
	SFML
)

set(BOX2D_VER
	box2d
)
set(YAML_VER
	yaml
)

set(SFML_INCLUDE
	"${CMAKE_SOURCE_DIR}/libs/${SFML_VER}/include"
	PARENT_SCOPE
)

set(BOX2D_INCLUDE
	"${CMAKE_SOURCE_DIR}/libs/${BOX2D_VER}/include"
	PARENT_SCOPE
)

set(YAML_INCLUDE
	"${CMAKE_SOURCE_DIR}/libs/${YAML_VER}/include"
	PARENT_SCOPE
)

set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

add_subdirectory(${SFML_VER})
add_subdirectory(${BOX2D_VER})
add_subdirectory(${YAML_VER})